# stack-bug

./: README.md  package.yaml  stack.yaml
mypackage/: mypackage.cabal
src/Interplay/: Types.hs
