name:                mypackage
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      ./.
  build-depends:       base
  exposed-modules:     MyModule
  default-language:    Haskell2010

executable myexecutable
  hs-source-dirs:      myexecutable
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , mypackage
